--- a/TheWall/Assembly-CSharp-vs.csproj
+++ b/TheWall/Assembly-CSharp-vs.csproj
@@ -46,9 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\SightMotion.cs" />
      <Compile Include="Assets\Scripts\VisionCone.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
- <HintPath>D:/Projects/TheWall/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ <HintPath>D:/Projects/TheWallRepo/TheWall/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
