--- a/TheWall/Assembly-CSharp-vs.csproj
+++ b/TheWall/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Blackboard.cs" />
      <Compile Include="Assets\Scripts\ClickNode.cs" />
+     <Compile Include="Assets\Scripts\CreateVisionCone.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\RetryButton.cs" />
      <Compile Include="Assets\Scripts\RoomItem.cs" />
